Fix all paths to use absolute paths with /MaximusHotel/ prefix for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maximus - Room Booking</title>
-    <base href="/MaximusHotel/">
-    <link rel="icon" href="img/favicon.png" />
+    <link rel="icon" href="/MaximusHotel/img/favicon.png" />
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&amp;display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/flaticon.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/flaticon.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/style.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         const Toast = Swal.mixin({
@@ -39,7 +38,7 @@
         });
     </script>
     <!-- Load layout system -->
-    <script src="js/layout-loader.js"></script>
+    <script src="/MaximusHotel/js/layout-loader.js"></script>
 </head>
 <body>
     <!-- Page Preloder -->
@@ -59,7 +58,7 @@
                     <h1>Maximus A Luxury Hotel</h1>
                     <p>Here are the best hotel booking sites, including recommendations for international
                         travel and for finding low-priced hotel rooms.</p>
-                    <a href="rooms.html" class="primary-btn">Discover Now</a>
+                    <a href="/MaximusHotel/rooms.html" class="primary-btn">Discover Now</a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-5 offset-xl-2 offset-lg-1">
@@ -100,9 +99,9 @@
         </div>
     </div>
     <div class="hero-slider owl-carousel">
-        <div class="hs-item set-bg" data-setbg="img/hero/hero-3.jpg"></div>
-        <div class="hs-item set-bg" data-setbg="img/hero/hero-1.jpg"></div>
-        <div class="hs-item set-bg" data-setbg="img/hero/hero-2.jpg"></div>
+        <div class="hs-item set-bg" data-setbg="/MaximusHotel/img/hero/hero-3.jpg"></div>
+        <div class="hs-item set-bg" data-setbg="/MaximusHotel/img/hero/hero-1.jpg"></div>
+        <div class="hs-item set-bg" data-setbg="/MaximusHotel/img/hero/hero-2.jpg"></div>
     </div>
 </section>
 <!-- Hero Section End -->
@@ -119,7 +118,7 @@
                     </div>
                     <p class="f-para">Maximus Hotel stands as a premier destination for travelers seeking exceptional accommodation experiences. We are dedicated to making travel seamless and enjoyable for millions of guests every day.</p>
                     <p class="s-para">Whether you are looking for a luxurious hotel, a cozy vacation rental, an all-inclusive resort, a spacious apartment, a welcoming guest house, or even a unique tree house, Maximus Hotel provides a diverse range of options to suit every traveler's needs.</p>
-                    <a href="about-us.html" class="primary-btn about-btn">Read More</a>
+                    <a href="/MaximusHotel/about-us.html" class="primary-btn about-btn">Read More</a>
                 </div>
 
             </div>
@@ -127,11 +126,11 @@
                 <div class="about-pic">
                     <div class="row">
                         <div class="col-sm-6">
-                            <div style="background-image: url('img/about/about-1.jpg'); background-size: cover; background-position: center; height: 100%; width: 100% !important;"></div>
+                            <div style="background-image: url('/MaximusHotel/img/about/about-1.jpg'); background-size: cover; background-position: center; height: 100%; width: 100% !important;"></div>
 
                         </div>
                         <div class="col-sm-6">
-                            <div style="background-image: url('img/about/about-2.jpg'); background-size: cover; background-position: center; height: 420px; width: 100% !important;"></div>
+                            <div style="background-image: url('/MaximusHotel/img/about/about-2.jpg'); background-size: cover; background-position: center; height: 420px; width: 100% !important;"></div>
 
                         </div>
                     </div>
@@ -214,16 +213,16 @@
 <div id="layout-footer-placeholder"></div>
 
 <!-- Js Plugins - Load before page scripts -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/pages.js"></script>
+<script src="/MaximusHotel/js/jquery-3.3.1.min.js"></script>
+<script src="/MaximusHotel/js/bootstrap.min.js"></script>
+<script src="/MaximusHotel/js/jquery.magnific-popup.min.js"></script>
+<script src="/MaximusHotel/js/jquery.nice-select.min.js"></script>
+<script src="/MaximusHotel/js/jquery-ui.min.js"></script>
+<script src="/MaximusHotel/js/jquery.slicknav.js"></script>
+<script src="/MaximusHotel/js/owl.carousel.min.js"></script>
+<script src="/MaximusHotel/js/main.js"></script>
+<script src="/MaximusHotel/js/auth.js"></script>
+<script src="/MaximusHotel/js/pages.js"></script>
 
 <script>
     // Load room types
@@ -248,7 +247,7 @@
                     
                     // Ensure image path is valid
                     const roomImage = (room.image && room.image.trim()) ? room.image.trim() : 'default.jpg';
-                    const imagePath = `img/room/${roomImage}`;
+                    const imagePath = `/MaximusHotel/img/room/${roomImage}`;
                     
                     const roomHtml = `
                         <div class="col-lg-3 col-md-6">
@@ -276,7 +275,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <a href="room-details.html?room_type=${encodeURIComponent(room.category_name)}" class="primary-btn">More Details</a>
+                                    <a href="/MaximusHotel/room-details.html?room_type=${encodeURIComponent(room.category_name)}" class="primary-btn">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -362,5 +361,6 @@
 </body>
 
 </html>
+
 
 
