--- a/profile.html
+++ b/profile.html
@@ -7,20 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maximus - Room Booking</title>
-    <base href="/MaximusHotel/">
-    <link rel="icon" href="img/favicon.png" />
+    <link rel="icon" href="/MaximusHotel/img/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/flaticon.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/flaticon.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="/MaximusHotel/css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
@@ -223,7 +222,7 @@
         });
     </script>
     <!-- Load layout system -->
-    <script src="js/layout-loader.js"></script>
+    <script src="/MaximusHotel/js/layout-loader.js"></script>
 </head>
 <body>
     <!-- Page Preloder -->
@@ -242,7 +241,7 @@
                 <div class="breadcrumb-text">
                     <h2>My Profile</h2>
                     <div class="bt-option">
-                        <a href="index.html">Home</a>
+                        <a href="/MaximusHotel/index.html">Home</a>
                         <span>My Profile</span>
                     </div>
                 </div>
@@ -732,18 +731,19 @@
 <div id="layout-footer-placeholder"></div>
 
 <!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/pages.js"></script>
+<script src="/MaximusHotel/js/jquery-3.3.1.min.js"></script>
+<script src="/MaximusHotel/js/bootstrap.min.js"></script>
+<script src="/MaximusHotel/js/jquery.magnific-popup.min.js"></script>
+<script src="/MaximusHotel/js/jquery.nice-select.min.js"></script>
+<script src="/MaximusHotel/js/jquery-ui.min.js"></script>
+<script src="/MaximusHotel/js/jquery.slicknav.js"></script>
+<script src="/MaximusHotel/js/owl.carousel.min.js"></script>
+<script src="/MaximusHotel/js/main.js"></script>
+<script src="/MaximusHotel/js/auth.js"></script>
+<script src="/MaximusHotel/js/pages.js"></script>
 <!-- Navigation update is now handled by layout-loader.js after layouts are loaded -->
 </body>
 </html>
+
 
 
