--- a/login.html
+++ b/login.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register & Login</title>
-  <base href="/MaximusHotel/">
-  <link rel="icon" href="img/favicon.png" />
+  <link rel="icon" href="/MaximusHotel/img/favicon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="/MaximusHotel/css/style2.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     .links {
@@ -391,8 +390,8 @@
       </div>
     </form>
   </div>
-  <script src="js/script2.js"></script>
-  <script src="js/auth.js"></script>
+  <script src="/MaximusHotel/js/script2.js"></script>
+  <script src="/MaximusHotel/js/auth.js"></script>
   <script>
     // Handle login form submission
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
@@ -1282,5 +1281,6 @@
 </body>
 
 </html>
+
 
 
