--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 <script src="/MaximusHotel/js/jquery.slicknav.js"></script>
 <script src="/MaximusHotel/js/owl.carousel.min.js"></script>
 <script src="/MaximusHotel/js/main.js"></script>
+<script src="/MaximusHotel/js/config.js"></script>
 <script src="/MaximusHotel/js/auth.js"></script>
 <script src="/MaximusHotel/js/pages.js"></script>
 
