Fix relative path to index.html in rooms.html

--- a/rooms.html
+++ b/rooms.html
@@ -123,7 +123,7 @@
                     title: 'Invalid Date Range',
                     text: 'Check-out date must be after Check-in date.',
                 }).then(() => {
-                    window.location.href = 'index.html';
+                    window.location.href = '/MaximusHotel/index.html';
                 });
                 return;
             }
