--- a/rooms.html
+++ b/rooms.html
@@ -192,12 +192,12 @@
                     
                     // Ensure image path is valid
                     const roomImage = (room.image && room.image.trim()) ? room.image.trim() : 'default.jpg';
-                    const imagePath = `/img/room/${roomImage}`;
+                    const imagePath = `/MaximusHotel/img/room/${roomImage}`;
                     
                     const roomHtml = `
                         <div class="col-lg-4 col-md-6">
                             <div class="room-item">
-                                <img src="${imagePath}" alt="" height="250" onerror="this.src='/img/room/default.jpg'">
+                                <img src="${imagePath}" alt="" height="250" onerror="this.src='/MaximusHotel/img/room/default.jpg'">
                                 <div class="ri-text">
                                     <h4>Room ${room.room_id} (${room.category_name})</h4>
                                     <h3>₱${price}<span>/Pernight</span></h3>
@@ -316,6 +316,7 @@
 </script>
 </body>
 </html>
+
 
 
 
