Fix login API calls - add config.js and improve fallback URL

--- a/login.html
+++ b/login.html
@@ -390,6 +390,7 @@
       </div>
     </form>
   </div>
+  <script src="/MaximusHotel/js/config.js"></script>
   <script src="/MaximusHotel/js/script2.js"></script>
   <script src="/MaximusHotel/js/auth.js"></script>
   <script>
