Update all room images to load from Hostinger backend instead of GitHub Pages

--- a/about-us.html
+++ b/about-us.html
@@ -102,21 +102,21 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="gallery-item set-bg" data-setbg="/MaximusHotel/img/room/standard.jpg">
+                    <div class="gallery-item set-bg" data-setbg="https://hotelmaximus.bytevortexz.com/img/room/standard.jpg">
                         <div class="gi-text">
                             <h3>Standard Room</h3>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="gallery-item set-bg" data-setbg="/MaximusHotel/img/room/deluxe.jpg">
+                            <div class="gallery-item set-bg" data-setbg="https://hotelmaximus.bytevortexz.com/img/room/deluxe.jpg">
                                 <div class="gi-text">
                                     <h3>Deluxe</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="gallery-item set-bg" data-setbg="/MaximusHotel/img/room/luxury.jpg">
+                            <div class="gallery-item set-bg" data-setbg="https://hotelmaximus.bytevortexz.com/img/room/luxury.jpg">
                                 <div class="gi-text">
                                     <h3>Luxury</h3>
                                 </div>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="gallery-item large-item set-bg" data-setbg="/MaximusHotel/img/room/family.jpg">
+                    <div class="gallery-item large-item set-bg" data-setbg="https://hotelmaximus.bytevortexz.com/img/room/family.jpg">
                         <div class="gi-text">
                             <h3>Family</h3>
                         </div>
