--- a/index.html
+++ b/index.html
@@ -248,9 +248,11 @@
                         maximumFractionDigits: 2
                     });
                     
-                    // Ensure image path is valid
+                    // Ensure image path is valid - use backend URL
                     const roomImage = (room.image && room.image.trim()) ? room.image.trim() : 'default.jpg';
-                    const imagePath = `/MaximusHotel/img/room/${roomImage}`;
+                    const imagePath = typeof CONFIG !== 'undefined' && CONFIG.getRoomImageUrl 
+                        ? CONFIG.getRoomImageUrl(roomImage)
+                        : `https://hotelmaximus.bytevortexz.com/img/room/${roomImage}`;
                     
                     const roomHtml = `
                         <div class="col-lg-3 col-md-6">
