--- a/room-details.html
+++ b/room-details.html
@@ -262,10 +262,19 @@
         // Display room details
         function displayRoomDetails(room) {
             const container = document.getElementById('roomDetailsContainer');
-            const imagePath = room.image ? `/MaximusHotel/img/room/${room.image}` : '/MaximusHotel/img/room/default.jpg';
+            // Use backend URL for room images
+            let imagePath;
+            if (typeof CONFIG !== 'undefined' && CONFIG.getRoomImageUrl) {
+                imagePath = CONFIG.getRoomImageUrl(room.image);
+            } else {
+                const backendUrl = 'https://hotelmaximus.bytevortexz.com';
+                imagePath = room.image && room.image.trim() && room.image !== 'default.jpg'
+                    ? `${backendUrl}/img/room/${room.image}`
+                    : `${backendUrl}/img/room/default.jpg`;
+            }
             
             container.innerHTML = `
-                <img src="${imagePath}" alt="${room.category_name || 'Room'}" onerror="this.src='/MaximusHotel/img/room/default.jpg'">
+                <img src="${imagePath}" alt="${room.category_name || 'Room'}" onerror="this.src='${defaultImagePath}'">
                 <div class="rd-text">
                     <div class="rd-title">
                         <h3>Room ${room.room_id || ''} ${room.room_id ? '(' + room.category_name + ')' : room.category_name || ''}</h3>
