--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     $(function() {
         // Initialize the check-in date picker
         $("#date-in").datepicker({
-            minDate: 0,
+            minDate: 1, // Minimum date is tomorrow (1 = tomorrow, 0 = today)
             dateFormat: 'dd MM, yy',
             onSelect: function(selectedDate) {
                 const checkInDate = $(this).datepicker('getDate');
